refactor: #51 Aho–Corasick 알고리즘 기반 탐색 방식 도입 및 성능 개선